Revision history for Perl distribution Chrome-Policy

This is a changelog file in addition to git commit messages.

{{$NEXT}}

  * Add GetOpt::Long::Parser OO option parsing
  * Use JSON::PP OO-style with the pretty method
  * Add correct path for Chrome::Policy::Chromium path
  * Raise Perl version from 5.36 to 5.37 to enable module_true by default