@@ -1,45 +1,7 @@
-name    = Chrome-Policy
-author  = Elvin Aslanov <rwp.primary@gmail.com>
+name = Chrome-Policy
+author = Elvin Aslanov <rwp.primary@gmail.com>
 license = Perl_5
 copyright_holder = Elvin Aslanov
-copyright_year   = 2023
+copyright_year = 2023
 
-[@Filter]
--bundle = @Basic
--remove = ConfirmRelease
-
-[CPANFile]
-
-[AutoPrereqs]
-
-[NextRelease]
-; Add {{$NEXT}} in Changes file
-
-[AutoVersion]
-major = 0
-
-[PruneFiles]
-filename = _Deparsed_XSubs.pm
-filename = Domain-Details.iml
-
-; External plugins
-[PodWeaver]
-
-[InstallGuide]
-
-[GithubMeta]
-issues = 1
-
-[@Filter]
--bundle = @Git
-; Includes the Git::Check, Git::Commit, Git::Tag, and Git::Push plugins
--remove = Git::Check
--remove = Git::Push
-; TODO: add username and SSH authentication
-
-[Git::Check]
-untracked_files = warn
-; Values: warn, ignore, die (default)
-
-
-; TODO: create and release a Moose RWP bundle
+[@RWP]
