@@ -4,9 +4,12 @@ use v5.37;
 use Object::Pad ':experimental';
 
 package Chrome::Policy;
+
 class Chrome::Policy :does(Chrome::Policy::Strict);
+
 use URI;
-# field url = URI -> new ('chrome://policy/');
+
+field $url :reader = URI -> new ('chrome://policy/');
 
 =pod
 
