@@ -8,3 +8,4 @@ This is a changelog file in addition to git commit messages.
   * Use JSON::PP OO-style with the pretty method
   * Add correct path for Chrome::Policy::Chromium path
   * Raise Perl version from 5.36 to 5.37 to enable module_true by default
+  * Correct PruneFiles to remove Chrome-Policy.iml instead
